--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "IDS investigation worksheet"
-author: "by Team-Name: User1, User2, User3, User4 & User5"
+author: "by Workshop 10: Euan McKerron, Yujun Ling, Akshit Wadhawan & Ariane Baillie"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r load-lib, message = FALSE}
 library(tidyverse)
+library(readxl)
 # Add any other libraries here
 
 
@@ -25,7 +26,7 @@ library(tidyverse)
 
 ```{r load-data}
 # load your data 
-
+data <- read_excel("data/criminal age dataset.xlsx")
 
 
 
