--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -27,20 +27,47 @@ library(readxl)
 # load your data 
 data <- read_excel("data/criminal age dataset.xlsx")
 
-#renaming collumn heading
+#renaming column heading and cleaning the data so that mini headings are not in the age column
 names(data)[1] <- "age"
+
+clean_data <- data %>%
+  filter(
+    !age %in% c("Males and Females", "Remand", "Sentenced", "Non criminal prisoners")
+  )
+
+#removing the percentage change column
+
+clean_data <- clean_data %>%
+  select(-`Percentage change \r\nJune 2022 to 2023`)
+
+
+#having to change the format of the data set to long form
+
+data_long <- clean_data %>%
+  pivot_longer(
+    cols = -age,
+    names_to = "date",
+    values_to = "values"
+  )
+
+#forcing the count value to be numeric 
+
+data_long$values <- as.numeric(gsub(",", "", data_long$values))
 
 #bar plot to compare age against total number of criminals
 
-ggplot(data, aes(
-    x = age
+ggplot(data_long, aes(
+    x = age,
+    y = values,
+    fill = date
     )) +
-  geom_bar() +
+  geom_bar(stat="identity") +
   labs(
     x = "age categories",
     y = "number of prisonners",
     title = "Number of prissoners by age",
-    subtitle = "data between 2022 and 2023")
+    subtitle = "data between 2022 and 2023",
+    fill = "date")
 
 ```
 
