--- a/investigation.Rmd
+++ b/investigation.Rmd
@@ -17,6 +17,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r load-lib, message = FALSE}
 library(tidyverse)
 library(readxl)
+library(janitor)
+library(ggplot2)
+library(lubridate)
 # Add any other libraries here
 
 
