added an introduction and data overview, and added some summary statistics for my graph

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -19,7 +19,6 @@ output:
 # Copy and paste the following code into your console to download and install
 # the `xaringan` package that contains all of the code which allows you 
 # to create presentation slides in Rmarkdown
-install.packages('xaringan')
 ```
 
 
@@ -38,6 +37,7 @@ library(zoo)
 library(scales)
 library(dplyr)
 library(yardstick)
+library(kableExtra)
 ```
 
 ```{r setup, include=FALSE}
@@ -76,12 +76,24 @@ style_xaringan(
 
 # Introduction
 
-- Writing about research question and the variables in both the raw and cleaned dataset
+- This project explores how factors such as age, sex, and location shape both the types of offences committed and the sentencing outcomes that follow. By analyzing these patterns in the available data, we also investigate whether it is possible to make reliable predictions about future crime trends and understand how these factors interact over time.
 
---
+---
 
-- Show table of description of variables used in clean data
+# Data Overview
 
+- This investigation uses data from the Offender Management Statistics Quarterly: January to March 2023, published by the Ministry of Justice. The dataset provides detailed administrative records on individuals entering, leaving, or serving sentences within the criminal justice system in England and Wales.
+- Our main variables after cleaning includes:
+```{r, echo = FALSE, results = 'asis'}
+Var_table <- data.frame(
+  Variable = c("", "", ""),
+  Type = c("", "", ""),
+  Description = c("", "", "")
+)
+
+knitr::kable(Var_table)
+```
+These variables allow us to explore how age, sex, offence type, location, and sentence length relate to violent crime. Using official government data ensures the analysis is reliable and nationally representative.
 ---
 
 #Exploratory statistics
