--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -46,23 +46,27 @@ knitr::opts_chunk$set(fig.retina = 3, dpi = 300, fig.width = 6, fig.asp = 0.618,
 ```
 
 ```{r load-data, include=FALSE}
-# Load your data here
 data <- read_excel("data/Copy of Punishments.xlsx")
 
 data_names <- data %>% janitor::clean_names()
 
+#mutate data frame to have an offense type variable and change variables to factors
 data_type <- data_names %>%
   mutate(offence_type = ifelse(
-    offence == "Violence", "Violent", "Non-Violent"
-  )) %>%
-  select(predominant_function_of_establishment, age_group, offence_type, sex)
+    offence == "Violence", "Violent", "Non-Violent"),
+    fct_recode(age_group, 'X15' = '15 - 17',  'X18' = '18 - 20',  'X21' = '21 - 24',
+               'X25' = '25 - 29',  'X30' = '30 - 39',  'X40' = '40 - 49',
+               'X50' = '50 - 59',  'X60' = '60 - 69',  'X70' = '70 and over')
+  ) %>%
+  rename(age_mod = `fct_recode(...)`) %>%
+  select(predominant_function_of_establishment, age_group, offence_type, sex, age_mod)
 
 data_type$age_group <- as.factor(data_type$age_group)
 data_type$offence_type <- as.factor(data_type$offence_type)
 data_type$predominant_function_of_establishment <- as.factor(data_type$predominant_function_of_establishment)
 data_type$sex <- as.factor(data_type$sex)
 
-colnames(data_type) <- c("est_type", "age_group", "offence_type", "sex")
+colnames(data_type) <- c("est_type", "age_group", "offence_type", "sex", "age_mod")
 ```
 
 ```{r include=FALSE}
@@ -86,9 +90,9 @@ style_xaringan(
 - Our main variables after cleaning includes:
 ```{r, echo = FALSE, results = 'asis'}
 Var_table <- data.frame(
-  Variable = c("", "", ""),
-  Type = c("", "", ""),
-  Description = c("", "", "")
+  Variable = c("offence_type", "age_group", "est_type", "sex"),
+  Type = c("factor", "factor", "factor", "factor"),
+  Description = c("Describes whether a crime was violent or non-violent.", "The age group of the offender.", "The type of establishment the offender was located in.", "The sex of the offender.")
 )
 
 knitr::kable(Var_table)
@@ -275,7 +279,18 @@ class: inverse, middle, center
 
 ---
 
-# Add stuff to do with model here
+# Modelling
+
+-Based off of the prior data visualisations, we chose age group and establishment type as the explanatory variables. As our target variable was whether a crime was violent or non-violent, a binary outcome, we chose to use logistic regression as our model choice.
+
+--
+
+.pull-left[
+- Some text
+- goes here
+]
+.pull-right[
+
 
 ---
 
